--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-test
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>test</title>
+</head>
+</html>
