--- a/index.html
+++ b/index.html
@@ -4,4 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test</title>
 </head>
+<body>
+    <h1>there will be something here eventually.</h1>
+</body>
 </html>
