--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </audio>
 
 <body>
-    <h1>there will be something here eventually.</h1>
+    <center><h1>there will be something here eventually.</h1></center>
 </body>
 </html>
