--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@ function cb(response) {
     <h1>there will be something here eventually.</h1>
     <h2>visitors: </h2>
     <br><h4 id="counter">0</h4>
+    <br><h3><a href="https://discord.gg/DZqpfk3Yz2">aaaaaa</a></h3>
+
 </body>
 </html>
