--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ function cb(response) {
 
 </head>
 
-<audio autoplay loop>
+<iframe src="reverse2.ogg" type="audio/ogg" allow="autoplay" id="audio" style="display:none"></iframe>
+<audio autoplay>
     <source src="reverse2.ogg" type="audio/ogg">
 </audio>
 
