--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ function cb(response) {
 }
 </script>
 <script async src="https://api.countapi.xyz/hit/imponderabilium/visits?callback=cb"></script>
-<script src="sound.js"></script>
+<script src="sound.js" type=<"text/javascript"></script>
 
 
 </head>
