--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@ function cb(response) {
 }
 </script>
 <script async src="https://api.countapi.xyz/hit/imponderabilium/visits?callback=cb"></script>
-<script src="sound.js" type=<"text/javascript"></script>
+<script src="sound.js" type="text/javascript"></script>
 
 
 </head>
 
-<body>
 <audio id="autoplay" loop>
     <source src="reverse2.ogg" type="audio/ogg">
 </audio>
